# Prognosis

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  setup.cfg
.github/pages/: index.html
.github/workflows/: backend.yml  pages.yml
data/: loader.py
prognosis/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
prognosis/apps/accounts/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
prognosis/apps/accounts/migrations/: 0001_initial.py
prognosis/apps/accounts/tests/: test_accounts.py  test_models.py  test_permissions.py  test_views.py
prognosis/apps/authentication/: apps.py  models.py  serializers.py  urls.py  views.py
prognosis/apps/authentication/migrations/: 0001_initial.py  0002_alter_user_options.py
prognosis/apps/authentication/tests/: test_models.py  test_views.py
prognosis/apps/core/: admin.py  apps.py  managers.py  models.py  periods.py  serializers.py  urls.py  views.py
prognosis/apps/core/migrations/: 0001_initial.py  0002_scenario_core_scenar_company_1b4ad5_idx.py
prognosis/apps/core/tests/: test_core.py  test_managers.py  test_models.py  test_periods.py  test_views.py
prognosis/apps/data_ingestion/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
prognosis/apps/data_ingestion/migrations/: 0001_initial.py
prognosis/apps/dimensions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
prognosis/apps/financials/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
prognosis/apps/reports/: data.py  models.py  serializers.py  tasks.py  urls.py  views.py
prognosis/templates/unfold/: admin_list.html
prognosis/templatetags/: unfold_extras.py
prognosis/tests/: conftest.py
prognosis/tests/templatetags/: test_unfold_extras.py
(+23 files in other folders)
